Fixed small devices layout problems

--- a/app/(home)/header/header.module.css
+++ b/app/(home)/header/header.module.css
@@ -169,6 +169,10 @@
 }
 
 @media (max-width: 540px) {
+    .headerContent {
+        padding-top: 70px;
+    }
+
     .headerContainer {
         flex-direction: column;
         gap: 18px;
